tests/baselines/reference/reassignStaticProp.errors.txt
tests/cases/compiler/reassignStaticProp.ts(3,12): error TS2300: Duplicate identifier 'bar'.
tests/cases/compiler/reassignStaticProp.ts(5,5): error TS2300: Duplicate identifier 'bar'.


==== tests/cases/compiler/reassignStaticProp.ts (2 errors) ====
    class foo {
     
        static bar = 1;
               ~~~
!!! error TS2300: Duplicate identifier 'bar'.
     
        static bar:string; // errror - duplicate id
        ~~~~~~~~~~~~~~~~~~
!!! error TS2300: Duplicate identifier 'bar'.
     
    }
     
     
    
    